--- a/app/src/main/res/layout/activity_camera_custom.xml
+++ b/app/src/main/res/layout/activity_camera_custom.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,4 +9,12 @@
         android:layout_height="match_parent"
         android:importantForAccessibility="no" />
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/ivPreview"
+        android:layout_margin="10dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_width="150dp"
+        android:layout_height="150dp" />
+
+</RelativeLayout>
