--- a/app/src/main/res/layout/activity_otalia_camera.xml
+++ b/app/src/main/res/layout/activity_otalia_camera.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <com.otaliastudios.cameraview.CameraView
         android:id="@+id/cvDetection"
+        app:cameraAutoFocusResetDelay="5"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
     <ImageView
         android:id="@+id/ivPreview"
+        android:src="@mipmap/ic_launcher"
         android:layout_margin="10dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
