--- a/app/src/main/res/layout/core_item_demo.xml
+++ b/app/src/main/res/layout/core_item_demo.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/llDemoContainer"
-    android:layout_width="match_parent"
+    android:layout_width="200dp"
+    android:layout_marginBottom="10dp"
     android:layout_height="wrap_content"
+    android:gravity="center"
     android:orientation="vertical">
+
+    <ImageView
+        android:src="@mipmap/ic_launcher"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/tvDemoName"
         android:text="@string/text_holder_demo"
         android:textStyle="bold"
-        android:textSize="18sp"
+        android:textSize="14sp"
+        android:gravity="center"
         android:layout_marginBottom="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
