--- a/app/src/main/res/layout/activity_camera_custom.xml
+++ b/app/src/main/res/layout/activity_camera_custom.xml
@@ -11,6 +11,7 @@
 
     <ImageView
         android:id="@+id/ivPreview"
+        android:src="@mipmap/ic_launcher"
         android:layout_margin="10dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
